app/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nodejs
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 2
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: hmyapp
        image: "omkargujar30/firstrepo:21.5"
        ports:
        - containerPort: 3000
