app/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: "gce"
  labels:
    name: my-nodejs-svc
spec:
  rules:
  - http:
      paths:
      - path: /v1
        pathType: my-nodejs-svc
        backend:
          service:
            name: 
            port: 
              number: 80
